feat: Add allowed attributes to certification-criteria endpoint
[#OCD-4272]